packages/openrxn-perovskite-optimizer/openrxn_perovskite_optimizer-1.0.0.tar.gz/openrxn_perovskite_optimizer-1.0.0/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openrxn-service
  namespace: openrxn
spec:
  selector:
    app: openrxn-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
