packages/openrxn-perovskite-optimizer/openrxn_perovskite_optimizer-1.0.0.tar.gz/openrxn_perovskite_optimizer-1.0.0/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openrxn-ingress
  namespace: openrxn
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openrxn-service
            port:
              number: 80
